# orka

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/adapters-discord/: Cargo.toml
crates/adapters-discord/src/: lib.rs
crates/adapters-telegram/: Cargo.toml
crates/adapters-telegram/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: cli.rs  config.rs  control.rs  envfile.rs  health.rs  main.rs  ops.rs  outbound.rs  runtime.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  model.rs  pipeline.rs  policy.rs  ports.rs  rate_limit.rs  session.rs  text.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs
docs/: ARCHITECTURE.md  CODE_REVIEW_REPORT.md  CONTROL_API.md  DEPLOYMENT_CHECKLIST.md  DISCORD_MULTI_CLI_SPEC.md  FAILURE_EDGECASE_PLAN.md  IMPLEMENTATION_ROADMAP.md  RUNBOOK.md  TECHNICAL_PLAN.md  WINDOWS_DEPLOYMENT.md
migrations/: 0001_init.sql  0002_runtime_state.sql  0003_event_log_runtime_fields.sql  0004_event_log_scope_key.sql
scripts/: pretest_blocker_drill.sh  pretest_manual_blocker_drill.sh
scripts/windows/: install-service.ps1  register-startup.ps1  setup.ps1  start-orka.ps1
