[workspace]
members = [
  "crates/app",
  "crates/core",
  "crates/storage-sqlite",
  "crates/adapters-discord",
  "crates/adapters-telegram",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate", "macros"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
