[package]
name = "orka-adapters-discord"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "http", "model", "native_tls_backend"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
orka-core = { path = "../core" }
