[package]
name = "orka-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

orka-core = { path = "../core" }
orka-storage-sqlite = { path = "../storage-sqlite" }
orka-adapters-discord = { path = "../adapters-discord" }
orka-adapters-telegram = { path = "../adapters-telegram" }
